[tool.poetry]
name = "olympus-calculator"
version = "0.1.0"
description = ""
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
